@@ -1,27 +1,30 @@
 package gui;
 
+import OdeSolver.DiferencasFinitas;
+import OdeSolver.RK4SistemasEdos;
+import OdeSolver.RKF45Storage;
 import application.Main;
 import gui.util.Alerts;
-import gui.util.ClickableMaker;
+
 import gui.util.DraggableMaker;
-import gui.util.Utils;
-import javafx.event.ActionEvent;
+
+import javafx.application.Platform;
 import javafx.fxml.FXML;
 import javafx.fxml.FXMLLoader;
 import javafx.fxml.Initializable;
+
 import javafx.scene.Node;
 import javafx.scene.Scene;
-import javafx.scene.control.Alert;
-import javafx.scene.control.MenuItem;
-import javafx.scene.control.ScrollPane;
-import javafx.scene.layout.AnchorPane;
-import javafx.scene.layout.HBox;
-import javafx.scene.layout.Pane;
-import javafx.scene.layout.VBox;
+import javafx.scene.control.*;
+import javafx.scene.layout.*;
 import javafx.scene.paint.Color;
 import javafx.scene.shape.Rectangle;
+
 import javafx.stage.Modality;
 import javafx.stage.Stage;
+import model.entities.PFR;
+import model.entities.Reactor;
+import model.entities.Simulation;
 
 
 import java.io.IOException;
@@ -30,6 +33,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.ResourceBundle;
 import java.util.function.Consumer;
+
 
 public class MainViewController implements Initializable {
 
@@ -43,12 +47,17 @@ public class MainViewController implements Initializable {
     @FXML
     private MenuItem menuItemAbout;
 
+    @FXML
+    private MenuItem menuItemPFR;
+
+    @FXML
+    private Button buttonrun;
+
+
 
     private List<Rectangle> rectangles = new ArrayList<>();
 
     DraggableMaker draggableMaker = new DraggableMaker();
-    ClickableMaker clickableMaker = new ClickableMaker();
-
 
     public void onMenuItemCSTRAction() {
 
@@ -56,7 +65,7 @@ public class MainViewController implements Initializable {
         VBox mainVBox = (VBox) ((ScrollPane) mainScene.getRoot()).getContent();
 
         HBox hBox = (HBox) mainVBox.getChildren().get(1);
-        Pane pane = (Pane) hBox.getChildren().getFirst();
+        Pane pane = (Pane) hBox.getChildren().get(0);
 
 
         Rectangle rectangle = new Rectangle(100, 100, Color.BLUE);
@@ -94,8 +103,47 @@ public class MainViewController implements Initializable {
 
     }
 
-    public void onRectangleNewEvent(ActionEvent event) {
-        Stage parentStage = Utils.currentStage(event);
+    public void onMenuItemPFRAction() {
+
+        Scene mainScene = Main.getMainScene();
+        VBox mainVBox = (VBox) ((ScrollPane) mainScene.getRoot()).getContent();
+
+        HBox hBox = (HBox) mainVBox.getChildren().get(1);
+        Pane pane = (Pane) hBox.getChildren().get(0);
+
+
+        Rectangle rectangle = new Rectangle(100, 100, Color.PINK);
+        pane.getChildren().add(rectangle);
+
+        rectangle.relocate(pane.getPrefWidth()/2, pane.getPrefHeight()/2);
+
+
+        rectangles.add(rectangle);
+
+        draggableMaker.makeDraggable(rectangle);
+
+        rectangle.setOnMousePressed(mouseEvent -> {
+            if (mouseEvent.getClickCount() == 2) {
+                try {
+                    FXMLLoader loader = new FXMLLoader(getClass().getResource("/gui/PFRForm.fxml"));
+                    Pane anchorPane = loader.load();
+
+                    Stage dialogStage = new Stage();
+                    dialogStage.setTitle("Enter PFR data");
+                    dialogStage.setScene(new Scene(anchorPane));
+                    dialogStage.setResizable(false);
+                    dialogStage.initOwner(mainScene.getWindow());
+                    dialogStage.initModality(Modality.WINDOW_MODAL);
+                    dialogStage.showAndWait();
+                }
+                catch (IOException e){
+                    e.printStackTrace();
+                    Alerts.showAlert("IO Exception", "Error loading view", e.getMessage(), Alert.AlertType.ERROR);
+                }
+            }
+        });
+
+
     }
 
 
@@ -107,7 +155,7 @@ public class MainViewController implements Initializable {
             Scene mainScene = Main.getMainScene();
             VBox mainVBox = (VBox) ((ScrollPane) mainScene.getRoot()).getContent();
 
-            Node mainMenu = mainVBox.getChildren().getFirst();
+            Node mainMenu = mainVBox.getChildren().get(0);
             mainVBox.getChildren().clear();
             mainVBox.getChildren().add(mainMenu);
             mainVBox.getChildren().addAll(newVbox.getChildren());
@@ -120,7 +168,30 @@ public class MainViewController implements Initializable {
         }
     }
 
+
+    @FXML
+    private void btSimulateAction() {
+
+        try {
+            FXMLLoader loader = new FXMLLoader(getClass().getResource("/gui/GraphForm.fxml"));
+            Pane anchorPane = loader.load();
+
+            Stage dialogStage = new Stage();
+            dialogStage.setTitle("Results");
+            dialogStage.setScene(new Scene(anchorPane));
+            dialogStage.setResizable(false);
+            dialogStage.initModality(Modality.WINDOW_MODAL);
+            dialogStage.showAndWait();
+        } catch (IOException e) {
+            e.printStackTrace();
+            Alerts.showAlert("IO Exception", "Error loading view", e.getMessage(), Alert.AlertType.ERROR);
+        }
+
+    }
+
+
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
+
     }
 }
